- Chance de critico de inimigos foi alterada. **1x**: `70%` -> `75%`. **1.3x:** `16%` -> `11%`
- A seleção de bênçãos no componente foi limitada para 15, já que não faz sentido ter 25 pois nem da pra selecionar algo maior que 15
- O Comando `/give` foi renomeado para `/presentear`
- O Comando `/meme fodase` foi renomeado para `/meme fds`s
- Nível de Batalha foi aumentado para `20`

### Fixed

- Árvore de Habilidades do Assassino estava com uma ordem errada
- Opção de abençõar status com pontos maior que 15, bloqueando o usuário de usar mais bênçãos
- Erros de português no comando `/ship`
- O valor de lucro da roleta foi ajustado para todas apostas que duplicava o valor real.
- Erros do RPG: Muitos erros aconteciam como 'Cannot read [0] of undefined'. Isso foi resolvido com um novo sistema de interações que, eu creio, que vão arrumar o problema, que era causado por lags entre a Menhera e o Discord
- Habilidades ignoravam a chance de acerto, fazendo com que sempre acertassem, mesmo que o usuário a errasse
- Habiliades de cura não ultrapassam mais o limite de vida
- Buffs de raças que não eram contabilizados
- Efeitos do **DEFENSOR** Não são mais infinitas
- Resolvido problema do veneno que ignorava armaduras

### Removed

- Colocação do usuário no top ao caçar
- Comando `/xandao`
- **Palavrões:** O Discord quer ser uma referência de um local seguro, por este motivo, a Menhera não pode falar palavrões :(
- Subcomando `/config censura`
- Comando `/avatar`

## [4.0.H-BETA] - 2022-03-01

### Added

- Os comandos do RPG agora tem um botão extra para terminar o comando na hora para não ter que esperar o tempo de execução para utilizar outro comando
- Adicionado a **Biblioteca de Boleham** dentro do comando `/centro`. Lá é possível acessar as enciclopédias do mundo para ter informações sobre objetos do RPG. Atualmente é possivel ver informações das habildiades lá. Você pode pesquisar habilidades por ID ou mesmo pelo **NOME** delas.

### Fixed
